[gd_scene load_steps=8 format=3 uid="uid://u86cg4o5eken"]

[ext_resource type="Script" path="res://assets/scripts/ultimate.gd" id="1_qicfc"]
[ext_resource type="Texture2D" uid="uid://in1qhhvtvmha" path="res://assets/images/effects/ultimate final/ultimateFinal1.png" id="2_tdfec"]
[ext_resource type="Texture2D" uid="uid://bw5cj4rhk7fiv" path="res://assets/images/effects/ultimate final/ultimateFinal2.png" id="3_fw23j"]
[ext_resource type="Texture2D" uid="uid://btbpln56m1non" path="res://assets/images/effects/ultimate final/ultimateFinal3.png" id="4_8xf36"]
[ext_resource type="Texture2D" uid="uid://mcgx41vdp57f" path="res://assets/images/effects/ultimate final/ultimateFinal4.png" id="5_7a07y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_715d8"]
size = Vector2(172, 1216)

[sub_resource type="SpriteFrames" id="SpriteFrames_i1fiw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tdfec")
}, {
"duration": 1.0,
"texture": ExtResource("3_fw23j")
}, {
"duration": 1.0,
"texture": ExtResource("4_8xf36")
}, {
"duration": 1.0,
"texture": ExtResource("5_7a07y")
}],
"loop": true,
"name": &"ultimateFinal",
"speed": 12.0
}]

[node name="ultimate" type="Area2D" groups=["Ultimate"]]
script = ExtResource("1_qicfc")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_top = 8.0
offset_right = 24.0
offset_bottom = 1308.0

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(120, 624)
shape = SubResource("RectangleShape2D_715d8")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ultimateExpanddeprec" type="Node2D" parent="."]
visible = false

[node name="expandUltimate" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(64, 96)
rotation = -0.535816
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate2" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(72, 176)
rotation = -0.535816
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate3" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(144, 208)
rotation = -0.535816
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate4" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(160, 288)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate5" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(112, 312)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate6" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(144, 344)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate7" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(104, 144)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate8" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(112, 240)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate9" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(152, 392)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate10" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(104, 376)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate11" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(184, 432)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate12" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(120, 448)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate13" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(152, 480)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate14" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(104, 512)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate15" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(168, 544)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate16" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(128, 560)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate17" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(112, 632)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate18" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(176, 608)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate19" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(152, 656)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate20" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(176, 688)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate21" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(112, 712)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate22" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(160, 760)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate23" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(120, 800)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate24" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(168, 864)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate25" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(104, 920)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate26" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(160, 936)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate27" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(128, 968)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate28" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(152, 1024)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate29" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(104, 1024)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate30" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(136, 1080)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate31" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(96, 1112)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate32" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(128, 1152)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate33" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(88, 1176)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate34" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(192, 504)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate35" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(208, 576)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate36" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(232, 664)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate37" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(216, 736)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate38" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(160, 808)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate39" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(200, 800)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate40" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(184, 904)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate41" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(240, 600)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate42" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(200, 472)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate43" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(232, 528)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate44" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(112, 856)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate45" type="AnimatedSprite2D" parent="ultimateExpanddeprec"]
position = Vector2(192, 352)
rotation = 0.307178
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="ultimateExpand" type="Node2D" parent="."]
position = Vector2(-55, 0)

[node name="expandUltimate" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(102, 128)
rotation = -0.535816
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"
frame_progress = 0.43833
flip_h = true

[node name="expandUltimate2" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(128, 184)
rotation = -0.535816
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate3" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(168, 200)
rotation = -0.535816
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate4" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(192, 248)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate5" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(168, 264)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate6" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(184, 320)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate7" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(128, 144)
rotation = 0.0205269
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate8" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(144, 224)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate9" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(224, 352)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate10" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(192, 360)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate11" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(224, 392)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate12" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(184, 416)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate13" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(208, 440)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate14" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(200, 504)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate15" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(200, 672)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate16" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(200, 568)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate17" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(219, 598)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate18" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(240, 560)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate19" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(216, 640)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate20" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(248, 648)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate21" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(242, 682)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate22" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(208, 752)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate23" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(224, 784)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate24" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(192, 856)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate25" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(232, 848)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate26" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(176, 912)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate27" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(208, 936)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate28" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(200, 992)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate29" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(168, 960)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate30" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(136, 1048)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate31" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(168, 1000)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate32" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(120, 1096)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate33" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(128, 1008)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate34" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(216, 480)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate35" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(224, 528)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate36" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(262, 598)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate37" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(240, 736)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate38" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(208, 712)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate39" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(232, 800)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate40" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(232, 888)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate41" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(264, 520)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate42" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(248, 424)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate43" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(240, 480)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate44" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(192, 808)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[node name="expandUltimate45" type="AnimatedSprite2D" parent="ultimateExpand"]
position = Vector2(208, 304)
rotation = 0.307178
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_i1fiw")
animation = &"ultimateFinal"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
